# ChronosMCP

./: .gitignore  CHANGELOG.md  README.md  chronos_mcp.py  pyproject.toml  test_audit_repro.py  test_integration.py
chronos/: __init__.py  analysis_tools.py  analyzers.py  db.py  geometry.py  graph_tools.py  mem_embed.py  memory.py  memory_tools.py  tfidf.py  tools.py  uuid7.py  validation.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  KNOWN_LIMITATIONS.md
docs/PRD/: CHRONOS_v2.3_Technical_Specification.docx  CHRONOS_v2.3_Technical_Specification.md  requirements.txt
