[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronosmcp"
version = "3.1.0"
description = "A persistent, hyperbolic knowledge graph and memory layer MCP server for Claude."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chronos Developer"}
]
dependencies = [
    "mcp[cli]~=1.6",
    "numpy~=2.2"
]

[tool.setuptools]
packages = ["chronos"]
py-modules = ["chronos_mcp"]
